--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,9 @@ $tertiaryColor: #515570;
 $quaternaryColor: #000000;
 // Blue
 $quinaryColor: #12193a;
-// Dark Blue
+// Navy Blue
 $senaryColor: #1f1f33;
+// Dark Blue
+$septenaryColor: #05061a;
 // Yellow
-$septenaryColor: #c49640;
+$octonaryColor: #c49640;
