Adding font from Google Fonts and Font Awesome.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
+/* Colors */
+
 // White
 $primaryColor: #ffffff;
 // Grey
@@ -14,3 +16,8 @@ $senaryColor: #1f1f33;
 $septenaryColor: #05061a;
 // Yellow
 $octonaryColor: #c49640;
+
+/* Fonts */
+
+$primaryFont: 'Times New Roman';
+$secondaryFont: 'Work Sans', sans-serif;
