--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,6 +27,7 @@ header {
     a {
         color: $primaryColor;
         text-decoration: none;
+        font-family: $secondaryFont;
     }
     
     a:hover {
@@ -44,6 +45,7 @@ header {
     h2 {
         position: absolute;
         color: $primaryColor;
+        font-family: $primaryFont;
     }
 
     .hero-image {
