--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -10,8 +10,8 @@ header {
     h1 {
         text-align: center;
     }
-    
-    .container-social {
+
+    #social {
         float: right;
     }
 }
