--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,7 +17,12 @@ $septenaryColor: #05061a;
 // Yellow
 $octonaryColor: #c49640;
 
-/* Fonts */
+/* Font Family */
 
 $primaryFont: 'Times New Roman';
 $secondaryFont: 'Work Sans', sans-serif;
+
+/* Font Weight */
+
+$regularWeight: 300;
+$boldWeight: 700;
