--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,6 +21,7 @@ $octonaryColor: #c49640;
 
 $primaryFont: 'Times New Roman';
 $secondaryFont: 'Work Sans', sans-serif;
+$tertiaryFont: 'helvetica';
 
 /* Font Weight */
 
