--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,3 +1,5 @@
+/* ------------------ General ------------------ */
+
 /* Prevent adjustments of font size after orientation changes on Windows Phone and iOS. */
 html {
     -webkit-text-size-adjust: 100%;
@@ -17,6 +19,8 @@ body {
     font-weight: $regularWeight;
     color: $primaryColor;
 }
+
+/* ------------------ Header ------------------ */
 
 header {
     background-color: $quaternaryColor;
@@ -43,6 +47,8 @@ header {
     }
 }
 
+/* ------------------ Slideshow ------------------ */
+
 #slideshow {
     .slideshow-image {
         width: 100%;
@@ -57,8 +63,11 @@ header {
     }
 }
 
+/* ------------------ New Album ------------------ */
+
 #new-album {
     text-align: center;
+    margin: auto;
 
     h3 {
         font-family: $tertiaryFont;
@@ -77,5 +86,20 @@ header {
     .new-album-image {
         width: 250px;
         margin: 20px 0;
+    }
+
+    .move-buttons {
+        width: 450px;
+        margin: auto;
+    }
+
+    .media-buttons {
+        text-transform: uppercase;
+        color: $primaryColor;
+        background-color: $quinaryColor;
+        border: none;
+        width: 200px;
+        height: 50px;
+        margin: 2px 0;
     }
 }
