--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -20,6 +20,7 @@ header {
 /* ------------------ New Album ------------------ */
 
 #new-album {
+    margin: 0 20px;
     text-align: left;
 
     h3 {
@@ -38,5 +39,23 @@ header {
 
     .media-buttons {
         margin: 0;
+    }
+
+    ol {
+        text-align: left;
+        width: 100%;
+        margin: auto;
+    }
+
+    .flex {
+        display: flex
+    }
+
+    .column {
+        flex-direction: column;
+    }
+
+    .flex-1 {
+        flex: 1;
     }
 }
