--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -20,6 +20,13 @@ body {
     color: $primaryColor;
 }
 
+// To prevent an element to collapse.
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 /* ------------------ Header ------------------ */
 
 header {
@@ -60,6 +67,12 @@ header {
         color: $primaryColor;
         background-color: $senaryColor;
         border: none;
+        width: 230px;
+        height: 60px;
+    }
+
+    h2 {
+        font-size: 32px;
     }
 }
 
@@ -101,5 +114,19 @@ header {
         width: 200px;
         height: 50px;
         margin: 2px 0;
+    }
+
+    ol {
+        text-align: left;
+        width: 350px;
+        margin: auto;
+    }
+
+    li {
+        margin: 30px 0;
+    }
+
+    .number li::before {
+        color: $octonaryColor;
     }
 }
