Fix for mobile and tablet.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -102,7 +102,7 @@ header {
     }
 
     .move-buttons {
-        width: 450px;
+        width: auto;
         margin: auto;
     }
 
@@ -118,7 +118,7 @@ header {
 
     ol {
         text-align: left;
-        width: 350px;
+        width: auto;
         margin: auto;
     }
 
