--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -30,8 +30,6 @@ body {
 /* ------------------ Header ------------------ */
 
 header {
-    background-color: $quaternaryColor;
-    opacity: .2;
     text-align: center;
 
     a {
@@ -39,14 +37,18 @@ header {
         text-decoration: none;
         font-family: $secondaryFont;
         text-transform: uppercase;
+        font-size: 18px;
+        margin: 0 10px;
     }
     
-    a:hover {
+    a:hover, a:active {
         color: $tertiaryColor;
     }
 
     h1 {
         text-transform: uppercase;
+        font-size: 25px;
+        margin: 5px 0;
     }
 
     #social {
@@ -54,14 +56,24 @@ header {
     }
 }
 
-/* ------------------ Slideshow ------------------ */
+#menu {
+    padding: 10px;
+    background-color: $quaternaryColor;
+    opacity: .2;
+    position: fixed;
+    width: 100%;
+}
 
 #slideshow {
+    #slideshow {
+        position: relative;
+    }
+
     .slideshow-image {
         width: 100%;
     }
 
-    .listen-now {
+    input[type=button] {
         font-weight: $boldWeight;
         text-transform: uppercase;
         color: $primaryColor;
@@ -69,6 +81,10 @@ header {
         border: none;
         width: 230px;
         height: 60px;
+    }
+
+    input[type=button]:hover {
+        background-color: darken($senaryColor, 1%);
     }
 
     h2 {
@@ -106,7 +122,7 @@ header {
         margin: auto;
     }
 
-    .media-buttons {
+    .button {
         text-transform: uppercase;
         color: $primaryColor;
         background-color: $quinaryColor;
@@ -114,6 +130,10 @@ header {
         width: 200px;
         height: 50px;
         margin: 2px 0;
+    }
+
+    .button:hover {
+        background-color: darken($quinaryColor, 1%);
     }
 
     ol {
