--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -32,6 +32,14 @@ body {
 header {
     text-align: center;
 
+    #menu {
+        padding: 10px;
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.2);
+        position: fixed;
+        width: 100%;
+    }
+    
     a {
         color: $primaryColor;
         text-decoration: none;
@@ -51,17 +59,19 @@ header {
         margin: 5px 0;
     }
 
-    #social {
-        float: none;
+    nav, #social {
+        display: none;
     }
-}
 
-#menu {
-    padding: 10px;
-    background-color: $quaternaryColor;
-    opacity: .2;
-    position: fixed;
-    width: 100%;
+    .hamburger-menu {
+        display: inline;
+        float: left;
+        margin: 10px;
+    }
+
+    .hamburger-menu:hover, .social-media:hover {
+        opacity: .5;
+    }
 }
 
 #slideshow {
