Styling text over slideshow.

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -32,6 +32,17 @@ header {
     }
 }
 
+#slideshow {
+    h2 {
+        font-size: 90px;
+        text-align: center;
+        top: 120px;
+        right: 80px;
+        width: 650px;
+    }
+}
+
+
 /* ------------------ New Album ------------------ */
 
 #new-album {
