--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -1,3 +1,11 @@
+/* ------------------ Header ------------------ */
+
+#slideshow {
+    h2 {
+        font-size: 40px;
+    }
+}
+
 /* ------------------ New Album ------------------ */
 
 #new-album {
