--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -81,6 +81,7 @@ header {
 
     .slideshow-image {
         width: 100%;
+        height: auto;
     }
 
     input[type=button] {
@@ -89,8 +90,8 @@ header {
         color: $primaryColor;
         background-color: $senaryColor;
         border: none;
-        width: 230px;
-        height: 60px;
+        width: 200px;
+        height: 50px;
     }
 
     input[type=button]:hover {
@@ -98,7 +99,11 @@ header {
     }
 
     h2 {
-        font-size: 32px;
+        font-size: 30px;
+        position: absolute;
+        top: 80px;
+        margin: 5% auto;
+        width: 100%;
     }
 }
 
@@ -137,8 +142,8 @@ header {
         color: $primaryColor;
         background-color: $quinaryColor;
         border: none;
-        width: 200px;
-        height: 50px;
+        width: 180px;
+        height: 40px;
         margin: 2px 0;
     }
 
