--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -8,6 +8,7 @@ header {
     nav {
         float: left;
         display: inline;
+        margin: 4px 0 0 0;
     }
 
     a {
@@ -28,7 +29,7 @@ header {
     #social {
         float: right;
         display: inline;
-        margin: 0 5px;
+        margin: 4px 5px 0 5px;
     }
 }
 
