--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,10 @@
 
 @import "variables";
 
+/* 
+I decided to design from a Mobile-first perspective. 
+Meaning that the _mobile.scss file contains the default styles.
+*/
 @import "mobile";
 
 // Media query to implement a responsive design for Tablet.
