--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -114,12 +114,6 @@ header {
 
     .new-album-image {
         width: 250px;
-        margin: 20px 0;
-    }
-
-    .move-buttons {
-        width: auto;
-        margin: auto;
     }
 
     .button {
@@ -127,8 +121,8 @@ header {
         color: $primaryColor;
         background-color: $quinaryColor;
         border: none;
-        width: 180px;
-        height: 40px;
+        width: 250px;
+        height: 50px;
         margin: 2px 0;
     }
 
@@ -143,7 +137,8 @@ header {
     }
 
     li {
-        margin: 30px 0;
+        font-size: 18px;
+        padding: 10px 5px;
     }
 
     .number li::before {
