--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -14,6 +14,20 @@ body {
     clear: both;
 }
 
+.button {
+    text-transform: uppercase;
+    color: $primaryColor;
+    background-color: $quinaryColor;
+    border: none;
+    width: 250px;
+    height: 50px;
+    margin: 2px 0;
+}
+
+.button:hover {
+    background-color: darken($quinaryColor, 1%);
+}
+
 /* ------------------ Header ------------------ */
 
 header {
@@ -103,31 +117,19 @@ header {
         font-weight: lighter;
         letter-spacing: .4em;
         font-size: 18px;
-        margin: 20px 0;
+        margin: 20px 0 0 0;
         color: $octonaryColor;
         text-transform: uppercase;
     }
 
     h4 {
+        font-family: $primaryFont;
         font-size: 28px;
+        margin: 10px 0 20px 0;
     }
 
     .new-album-image {
         width: 250px;
-    }
-
-    .button {
-        text-transform: uppercase;
-        color: $primaryColor;
-        background-color: $quinaryColor;
-        border: none;
-        width: 250px;
-        height: 50px;
-        margin: 2px 0;
-    }
-
-    .button:hover {
-        background-color: darken($quinaryColor, 1%);
     }
 
     ol {
