--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -1,8 +1,8 @@
 /* ------------------ General ------------------ */
 
 .button {
-    width: 150px;
-    height: 40px;
+    width: 90px;
+    height: 20px;
 }
 
 /* ------------------ Header ------------------ */
@@ -42,6 +42,7 @@ header {
 
 #new-album {
     text-align: left;
+    margin: 50px auto;
 
     h3 {
         font-size: 14px;
@@ -52,10 +53,6 @@ header {
     h4 {
         font-size: 40px;
         margin: 0 0 10px 16px;
-    }
-
-    .new-album-image {
-        width: 300px;
     }
 
     ol {
@@ -69,3 +66,5 @@ header {
         padding: 5px;
     }
 }
+
+/* ------------------ News ------------------ */
