--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -1,3 +1,5 @@
+/* ------------------ General ------------------ */
+
 /* ------------------ Header ------------------ */
 
 #slideshow {
@@ -9,9 +11,11 @@
 /* ------------------ New Album ------------------ */
 
 #new-album {
+    margin: 30px auto;
+
     .button {
         margin: 0;
-        width: 180px;
+        width: 170px;
         height: 50px;
     }
 
@@ -19,3 +23,5 @@
         font-size: 16px;
     }
 }
+
+/* ------------------ News ------------------ */
