--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -40,6 +40,7 @@ header {
     }
 
     h1 {
+        font-family: $primaryFont;
         text-transform: uppercase;
         font-size: 25px;
         margin: 20px;
@@ -98,6 +99,7 @@ header {
     }
 
     h2 {
+        font-family: $tertiaryFont;
         font-size: 25px;
         position: absolute;
         top: 80px;
@@ -128,19 +130,25 @@ header {
         margin: 10px 0 20px 0;
     }
 
-    ol {
-        text-align: left;
-        width: auto;
-        margin: auto;
-    }
-
     li {
+        font-family: $tertiaryFont;
         font-size: 18px;
         padding: 10px 5px;
+        list-style-type: none;
+        text-align: left;
     }
 
-    .number li::before {
+    .number {
+        padding: 0 15px 5px 0;
         color: $octonaryColor;
+        background: none;
+        border: none;
+        width: 30px;
+        text-align: right;
+    }
+
+    .number:hover {
+        color: $novenaryColor;
     }
 }
 
@@ -154,7 +162,9 @@ header {
         font-weight: $boldWeight;
         letter-spacing: .4em;
         font-size: 30px;
-        color: $octonaryColor;
+        background: -webkit-linear-gradient(#c49640 50%, #816228 50%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         text-transform: uppercase;
     }
 
@@ -186,5 +196,27 @@ header {
         bottom: 0;
         background: rgb(12, 25, 58);
         background: rgba(18, 25, 58, 0.9);
+    }
+}
+
+/* ------------------ Tour Dates ------------------ */
+
+#tour-dates {
+    margin: 10px 0;
+    position: relative;
+
+    .tour-box {
+        position: absolute;
+    }
+
+    h3 {
+        font-family: $secondaryFont;
+        font-weight: $boldWeight;
+        letter-spacing: .4em;
+        font-size: 30px;
+        background: -webkit-linear-gradient(#c49640 50%, #816228 50%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-transform: uppercase;
     }
 }
