--- a/src/assets/scss/components/_variables.scss
+++ b/src/assets/scss/components/_variables.scss
@@ -16,6 +16,8 @@ $senaryColor: #1f1f33;
 $septenaryColor: #05061a;
 // Yellow
 $octonaryColor: #c49640;
+// Brown
+$novenaryColor: #816228;
 
 /* Font Family */
 
