--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -1,5 +1,10 @@
 /* ------------------ General ------------------ */
 
+.button {
+    width: 180px;
+    height: 50px;
+}
+
 /* ------------------ Header ------------------ */
 
 #slideshow {
@@ -13,15 +18,19 @@
 #new-album {
     margin: 30px auto;
 
-    .button {
-        margin: 0;
-        width: 170px;
-        height: 50px;
-    }
-
     li {
         font-size: 16px;
     }
 }
 
 /* ------------------ News ------------------ */
+
+#news {
+    margin: 30px auto;
+}
+
+/* ------------------ Tour Dates ------------------ */
+
+#tour-dates {
+    margin: 30px auto;
+}
