--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -197,6 +197,11 @@ header {
         background: rgb(12, 25, 58);
         background: rgba(18, 25, 58, 0.9);
     }
+
+    .view-more {
+        text-align: center;
+        margin: 20px 0 0 0;
+    }
 }
 
 /* ------------------ Tour Dates ------------------ */
@@ -204,6 +209,11 @@ header {
 #tour-dates {
     margin: 10px 0;
     position: relative;
+
+    .bg-image {
+        width: 70%;
+        height: 70%;
+    }
 
     .tour-box {
         position: absolute;
@@ -218,5 +228,45 @@ header {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         text-transform: uppercase;
+    }
+
+    li {
+        list-style-type: none;
+        font-family: $secondaryFont;
+        width: auto;
+    }
+
+    span {
+        display: inline-block;
+    }
+
+    .date {
+        text-transform: uppercase;
+        width: 50px;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .yellow-date {
+        font-size: 12px;
+        color: $octonaryColor;
+    }
+
+    .location {
+        text-transform: uppercase;
+        width: 250px;
+    }
+
+    .state {
+        min-width: 200px;
+        color: $secondaryColor;
+        width: 200px;
+    }
+
+    .button {
+        width: 110px;
+        height: 30px;
+        margin: 0;
+        font-size: 12px;
     }
 }
