--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -104,6 +104,7 @@ $print-transparent-backgrounds: true;
 // 2. Breakpoints
 // --------------
 
+// I used this breakpoints for the media queries located in app.scss.
 $breakpoints: (
   small: 0,
   medium: 640px,
@@ -139,7 +140,7 @@ $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
-    'h1': ('font-size': 24),
+    'h1': ('font-size': 25),
     'h2': ('font-size': 20),
     'h3': ('font-size': 19),
     'h4': ('font-size': 18),
@@ -148,6 +149,14 @@ $header-styles: (
   ),
   medium: (
     'h1': ('font-size': 48),
+    'h2': ('font-size': 40),
+    'h3': ('font-size': 31),
+    'h4': ('font-size': 25),
+    'h5': ('font-size': 20),
+    'h6': ('font-size': 16),
+  ),
+  large: (
+    'h1': ('font-size': 30),
     'h2': ('font-size': 40),
     'h3': ('font-size': 31),
     'h4': ('font-size': 25),
