--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,9 @@
 
 @charset 'utf-8';
 
+// Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700');
+
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
