--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -7,13 +7,6 @@ body {
     color: $primaryColor;
 }
 
-// To prevent an element to collapse.
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 .button {
     text-transform: uppercase;
     color: $primaryColor;
@@ -37,19 +30,16 @@ header {
         background: rgb(0, 0, 0);
         background: rgba(0, 0, 0, 0.2);
         position: fixed;
+        width: 100%;
     }
 
     h1 {
         font-family: $primaryFont;
         text-transform: uppercase;
-        font-size: 25px;
-        margin: 20px;
-    }
-
-    nav, #social {
+        margin: 0;
         display: none;
     }
-    
+
     a {
         color: $primaryColor;
         text-decoration: none;
@@ -57,20 +47,27 @@ header {
         text-transform: uppercase;
         font-size: 18px;
         margin: 0 5px;
+        text-align: left;
     }
     
     a:hover, a:active {
         color: $tertiaryColor;
     }
 
-    .hamburger-menu {
-        display: inline;
-        float: left;
-        margin: 25px 0;
+    .social-media:hover {
+        opacity: .5;
+    }
+    
+    .title-bar {
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.2);
     }
 
-    .hamburger-menu:hover, .social-media:hover {
-        opacity: .3;
+    .title-bar-title {
+        font-family: $primaryFont;
+        text-transform: uppercase;
+        font-size: 20px;
+        margin: 0 18px;
     }
 }
 
@@ -119,7 +116,7 @@ header {
         font-weight: $boldWeight;
         letter-spacing: .4em;
         font-size: 18px;
-        margin: 20px 0 0 0;
+        margin: 30px 0 0 0;
         color: $octonaryColor;
         text-transform: uppercase;
     }
@@ -127,7 +124,11 @@ header {
     h4 {
         font-family: $primaryFont;
         font-size: 28px;
-        margin: 10px 0 20px 0;
+        margin: 10px 0 0 0;
+    }
+
+    #new-album-buttons {
+        margin: 30px 0;
     }
 
     li {
