--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,5 +1,4 @@
 {{!-- This is the base layout for your project, and will be used on every page. --}}
-
 <!--
 Candidate: Francheska Guzman
 Deadline: January 31, 2018 at 10:00am
@@ -12,10 +11,8 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Pre-work: 2 CHAINZ</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
-	  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
 
