--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -7,6 +7,30 @@
 
 /* ------------------ Header ------------------ */
 
+header {
+    h1 {
+        display: inline;
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    nav {
+        display: inline;
+        margin: 15px 0;
+    }
+
+    #social {
+        display: inline;
+        margin: 15px 0;
+    }
+
+    a {
+        font-size: 10px;
+        display: inline;
+        margin: 0 2px;
+    }
+}
+
 #slideshow {
     h2 {
         font-size: 40px;
@@ -19,7 +43,14 @@
     margin: 30px auto;
 
     li {
-        font-size: 16px;
+        font-size: 12px;
+        padding: 10px 0;
+    }
+
+    .number {
+        font-size: 14px;
+        padding: 0 5px 10px 0;
+        width: auto;
     }
 }
 
@@ -33,4 +64,28 @@
 
 #tour-dates {
     margin: 30px auto;
+
+    .date {
+        width: 50px;
+        font-size: 25px;
+    }
+
+    .yellow-date {
+        font-size: 15px;
+    }
+
+    .location {
+        font-size: 15px;
+        width: 220px;
+    }
+
+    .state {
+        font-size: 15px;
+        width: 220px;
+    }
+
+    .button {
+        width: 90px;
+        font-size: 12px;
+    }
 }
