--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -99,8 +99,8 @@ header {
         font-family: $tertiaryFont;
         font-size: 25px;
         position: absolute;
-        top: 80px;
-        margin: 5% auto;
+        top: 60px;
+        margin: 4% auto;
         width: 100%;
     }
 }
@@ -133,23 +133,31 @@ header {
 
     li {
         font-family: $tertiaryFont;
-        font-size: 18px;
+        font-size: 15px;
         padding: 10px 5px;
         list-style-type: none;
         text-align: left;
     }
 
     .number {
+        font-size: 18px;
         padding: 0 15px 5px 0;
         color: $octonaryColor;
         background: none;
         border: none;
         width: 30px;
-        text-align: right;
     }
 
     .number:hover {
         color: $novenaryColor;
+    }
+
+    figcaption {
+        margin: 0 0 30px 0;
+    }
+
+    .new-album-titles {
+        display: none;
     }
 }
 
@@ -243,9 +251,10 @@ header {
 
     .date {
         text-transform: uppercase;
-        width: 50px;
+        width: 40px;
         text-align: center;
         font-size: 20px;
+        line-height: 1;
     }
 
     .yellow-date {
@@ -254,20 +263,21 @@ header {
     }
 
     .location {
+        font-size: 12px;
         text-transform: uppercase;
-        width: 250px;
+        width: 160px;
     }
 
     .state {
-        min-width: 200px;
+        font-size: 12px;
         color: $secondaryColor;
-        width: 200px;
+        width: 160px;
     }
 
     .button {
-        width: 110px;
-        height: 30px;
+        width: 70px;
+        height: auto;
         margin: 0;
-        font-size: 12px;
+        font-size: 10px;
     }
 }
