--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -1,31 +1,34 @@
-/* ------------------ General ------------------ */
-
-.button {
-    width: 130px;
-    height: 40px;
-    margin: 10px 0 10px 0;
-}
-
 /* ------------------ Header ------------------ */
 
 header {
+    #menu {
+        padding: 18px 0;
+    }
+
     h1 {
         font-size: 30px;
     }
 
     a {
-        font-size: 15px;
-        margin: 0 3px;
+        font-size: 14px;
+        padding: 0 3px;
     }
 }
 
 #slideshow {
+    #main-title {
+        margin: 0;
+        top: 18vh;
+        left: 200px;
+    }
+
     h2 {
-        font-size: 90px;
-        text-align: center;
-        top: 120px;
-        right: 80px;
-        width: 650px;
+        font-size: 80px;
+    }
+
+    #scroll-down-btn {
+        width: 190px;
+        height: 60px;
     }
 }
 
@@ -65,6 +68,11 @@ header {
     li {
         padding: 7px 0;
     }
+
+    .button {
+        width: 140px;
+        height: 40px;
+    }
 }
 
 /* ------------------ News ------------------ */
@@ -98,7 +106,7 @@ header {
     }
 
     .button {
-        width: 110px;
+        width: 140px;
         font-size: 14px;
     }
 }
