--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -1,39 +1,43 @@
-/* ------------------ General ------------------ */
-
-.button {
-    width: 180px;
-    height: 50px;
-}
-
 /* ------------------ Header ------------------ */
 
 header {
+    #menu {
+        padding: 12px 0;
+    }
+
     h1 {
         display: inline;
         text-align: center;
-        font-size: 20px;
+        font-size: 14px;
     }
     
     nav {
         display: inline;
-        margin: 15px 0;
     }
 
     #social {
         display: inline;
-        margin: 15px 0;
     }
 
     a {
         font-size: 10px;
         display: inline;
-        margin: 0 2px;
+        padding: 0 2px;
     }
 }
 
 #slideshow {
+    #main-title {
+        top: 9vh;
+    }
+
     h2 {
-        font-size: 40px;
+        font-size: 50px;
+    }
+
+    #scroll-down-btn {
+        width: 170px;
+        height: 50px;
     }
 }
 
