--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -30,13 +30,11 @@ header {
         background: rgb(0, 0, 0);
         background: rgba(0, 0, 0, 0.2);
         position: fixed;
-        width: 100%;
     }
 
     h1 {
         font-family: $primaryFont;
         text-transform: uppercase;
-        margin: 0;
         display: none;
     }
 
@@ -46,7 +44,7 @@ header {
         font-family: $secondaryFont;
         text-transform: uppercase;
         font-size: 18px;
-        margin: 0 5px;
+        padding: 0 5px;
         text-align: left;
     }
     
@@ -67,7 +65,7 @@ header {
         font-family: $primaryFont;
         text-transform: uppercase;
         font-size: 20px;
-        margin: 0 18px;
+        padding: 0 18px;
     }
 }
 
@@ -81,27 +79,32 @@ header {
         height: auto;
     }
 
-    input[type=button] {
+    #main-title {
+        width: 100%;
+        position: absolute;
+        top: 7vh;
+        margin: auto;
+    }
+
+    h2 {
+        font-family: $tertiaryFont;
+        font-size: 35px;
+        line-height: 1;
+    }
+
+    #scroll-down-btn {
         font-weight: $boldWeight;
         text-transform: uppercase;
         color: $primaryColor;
         background-color: $senaryColor;
         border: none;
-        width: 200px;
-        height: 50px;
+        width: 150px;
+        height: 40px;
+        margin: 10px;
     }
 
-    input[type=button]:hover {
+    #scroll-down-btn:hover {
         background-color: darken($senaryColor, 1%);
-    }
-
-    h2 {
-        font-family: $tertiaryFont;
-        font-size: 25px;
-        position: absolute;
-        top: 60px;
-        margin: 4% auto;
-        width: 100%;
     }
 }
 
