Adding Newsletter and Footer

--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -110,3 +110,9 @@ header {
         font-size: 14px;
     }
 }
+
+/* ------------------ Footer ------------------ */
+
+footer {
+    text-align: left;
+}
