--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -93,3 +93,7 @@ header {
         font-size: 12px;
     }
 }
+
+/* ------------------ Newsletter ------------------ */
+
+/* ------------------ Footer ------------------ */
