--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -111,6 +111,8 @@ header {
     }
 }
 
+/* ------------------ Newsletter ------------------ */
+
 /* ------------------ Footer ------------------ */
 
 footer {
