--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -7,20 +7,6 @@ body {
     color: $primaryColor;
 }
 
-.button {
-    text-transform: uppercase;
-    color: $primaryColor;
-    background-color: $quinaryColor;
-    border: none;
-    width: 190px;
-    height: 50px;
-    margin: 2px 0;
-}
-
-.button:hover {
-    background-color: darken($quinaryColor, 1%);
-}
-
 /* ------------------ Header ------------------ */
 
 header {
@@ -28,8 +14,9 @@ header {
 
     #menu {
         background: rgb(0, 0, 0);
-        background: rgba(0, 0, 0, 0.2);
+        background: rgba(0, 0, 0, 0.4);
         position: fixed;
+        z-index: 1;
     }
 
     h1 {
@@ -97,10 +84,12 @@ header {
         text-transform: uppercase;
         color: $primaryColor;
         background-color: $senaryColor;
-        border: none;
         width: 150px;
         height: 40px;
-        margin: 10px;
+        margin-top: 10px;
+        border-top: none;
+        border-left: none;
+        cursor: pointer;
     }
 
     #scroll-down-btn:hover {
@@ -155,19 +144,28 @@ header {
         color: $novenaryColor;
     }
 
-    figcaption {
-        margin: 0 0 30px 0;
-    }
-
     .new-album-titles {
         display: none;
+    }
+
+    .button {
+        text-transform: uppercase;
+        color: $primaryColor;
+        background-color: $quinaryColor;
+        width: 190px;
+        height: 50px;
+        margin: 2px 0;
+    }
+    
+    .button:hover {
+        background-color: darken($quinaryColor, 1%);
     }
 }
 
 /* ------------------ News ------------------ */
 
 #news {
-    margin: 10px 0;
+    margin: 10px auto;
 
     h3 {
         font-family: $secondaryFont;
@@ -182,29 +180,29 @@ header {
 
    article {
         position: relative;
-        text-align: center;
    }
 
    p {
-       font-size: 14px;
+       font-size: 13px;
        text-transform: uppercase;
        text-align: center;
+       font-family: $secondaryFont;
    }
 
    .smaller-image {
-        max-width: 250px;
+        width: 250px;
    }
 
    .bigger-image {
-        max-width: 500px;
+        width: 500px;
    }
 
    figcaption {
         font-size: 14px;
-        width: auto;
-        height: 50px;
+        height: 60px;
+        padding: 10px 0;
         overflow: hidden;
-        position: absolute;
+        position: relative;
         bottom: 0;
         background: rgb(12, 25, 58);
         background: rgba(18, 25, 58, 0.9);
@@ -214,12 +212,27 @@ header {
         text-align: center;
         margin: 20px 0 0 0;
     }
+
+    .button {
+        text-transform: uppercase;
+        color: $primaryColor;
+        background-color: $quinaryColor;
+        width: 190px;
+        height: 50px;
+        margin: 2px 0;
+        border-top: none;
+        border-left: none;
+    }
+    
+    .button:hover {
+        background-color: darken($quinaryColor, 1%);
+    }
 }
 
 /* ------------------ Tour Dates ------------------ */
 
 #tour-dates {
-    margin: 10px 0;
+    margin: 10px auto;
     position: relative;
 
     .bg-image {
@@ -278,16 +291,26 @@ header {
     }
 
     .button {
+        text-transform: uppercase;
+        color: $primaryColor;
+        background-color: $quinaryColor;
         width: 70px;
         height: auto;
         margin: 0;
         font-size: 10px;
+    }
+
+    .button:hover {
+        background-color: darken($quinaryColor, 1%);
     }
 }
 
 /* ------------------ Newsletter ------------------ */
 
 #newsletter {
+    margin: 10px auto;
+    position: relative;
+
     h3 {
         font-family: $secondaryFont;
         font-weight: $boldWeight;
