--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -16,12 +16,6 @@ header {
 }
 
 #slideshow {
-    #main-title {
-        margin: 0;
-        top: 18vh;
-        left: 200px;
-    }
-
     h2 {
         font-size: 80px;
     }
@@ -45,16 +39,15 @@ header {
     h3 {
         font-size: 14px;
         color: $octonaryColor;
-        margin: 0 0 10px 16px;
+        margin: 0 0 10px 0;
     }
 
     h4 {
         font-size: 40px;
-        margin: 0 0 0 16px;
     }
 
     #new-album-buttons {
-        margin: 10px 0;
+        padding: 10px 0;
     }
     
     figcaption {
@@ -117,4 +110,8 @@ header {
 
 footer {
     text-align: left;
+
+    .social-media {
+        padding: 3px;
+    }
 }
