Adding style to Newsletter

--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -16,6 +16,11 @@ header {
 }
 
 #slideshow {
+    #main-title {
+        top: 19vh;
+        right: 15%;
+    }
+
     h2 {
         font-size: 80px;
     }
