Adding e-mail and zip code verification.

--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -111,6 +111,11 @@ header {
 
 /* ------------------ Newsletter ------------------ */
 
+#newsletter {
+    margin: 50px auto;
+}
+
+
 /* ------------------ Footer ------------------ */
 
 footer {
