--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -97,4 +97,12 @@ header {
 
 /* ------------------ Newsletter ------------------ */
 
+#newsletter {
+    margin: 30px auto;
+
+    .check-list {
+        text-align: center;
+    }
+}
+
 /* ------------------ Footer ------------------ */
