--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -315,6 +315,7 @@ header {
 #newsletter {
     margin: 10px auto;
     position: relative;
+    text-align: center;
 
     h3 {
         font-family: $secondaryFont;
@@ -330,14 +331,25 @@ header {
     h5 {
         color: $octonaryColor;
         font-family: $secondaryColor;
+        font-size: 15px;
+        text-transform: uppercase;
+    }
+
+    .form-wrapper {
+        padding: 20px 0;
     }
 
     .newsletter-field {
         border: none;
         border-bottom: 2px solid $primaryColor;
-        color: $primaryColor;
         background: $septenaryColor;
-        text-transform: uppercase;
+        font-family: $secondaryColor;
+        color: $primaryColor;
+        font-size: 20px;
+    }
+
+    .check-list {
+        text-align: left;
     }
 
     .checkbox-label {
@@ -350,6 +362,7 @@ header {
         color: $secondaryColor;
         font-family: $secondaryFont;
         text-transform: uppercase;
+        font-size: 13px;
     }
 
     #submit-form {
@@ -367,6 +380,16 @@ header {
 
     #submit-form:hover {
         background-color: darken($quinaryColor, 1%);
+    }
+
+    .submission {
+        padding: 20px;
+    }
+
+    input[type="checkbox"], 
+    input[type="checkbox"]:checked {
+        background: $quinaryColor;
+        color: $primaryColor;
     }
 }
 
