--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -128,6 +128,10 @@ header {
         padding: 30px 0;
     }
 
+    figure {
+        padding: 30px;
+    }
+
     li {
         font-family: $tertiaryFont;
         font-size: 15px;
@@ -181,6 +185,7 @@ header {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         text-transform: uppercase;
+        text-align: center;
     }
 
    article {
@@ -207,7 +212,7 @@ header {
         height: 60px;
         padding: 10px 0;
         overflow: hidden;
-        position: relative;
+        position: absolute;
         bottom: 0;
         background: rgb(12, 25, 58);
         background: rgba(18, 25, 58, 0.9);
@@ -215,7 +220,7 @@ header {
 
     .view-more {
         text-align: center;
-        margin: 20px 0 0 0;
+        margin: 40px 0 0 0;
     }
 
     .button {
@@ -247,6 +252,7 @@ header {
 
     .tour-box {
         position: absolute;
+        text-align: center;
     }
 
     h3 {
@@ -263,7 +269,6 @@ header {
     li {
         list-style-type: none;
         font-family: $secondaryFont;
-        width: auto;
     }
 
     span {
@@ -287,12 +292,14 @@ header {
         font-size: 12px;
         text-transform: uppercase;
         width: 160px;
+        text-align: left;
     }
 
     .state {
         font-size: 12px;
         color: $secondaryColor;
         width: 160px;
+        text-align: left;
     }
 
     .button {
@@ -333,6 +340,7 @@ header {
         font-family: $secondaryColor;
         font-size: 15px;
         text-transform: uppercase;
+        padding: 30px 0 0 0;
     }
 
     .form-wrapper {
