--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -13,6 +13,7 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-work: 2 CHAINZ</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -20,5 +21,6 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
     {{> body}}
 
     <script src="{{root}}assets/js/app.js"></script>
+    <script src="{{root}}assets/js/scripts/submit.js"></script>
   </body>
 </html>
