--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -38,14 +38,6 @@ header {
     a:hover, a:active {
         color: $tertiaryColor;
     }
-
-    .social-media {
-        padding: 0px;
-    }
-
-    .social-media:hover {
-        opacity: .5;
-    }
     
     .title-bar {
         background: rgb(0, 0, 0);
@@ -92,6 +84,7 @@ header {
         width: 150px;
         height: 40px;
         margin-top: 10px;
+        border-color: #515570;
         border-top: none;
         border-left: none;
         cursor: pointer;
@@ -381,6 +374,7 @@ header {
         height: 40px;
         margin: 0;
         font-size: 15px;
+        border-color: #333961;
         border-top: none;
         border-left: none;
         cursor: pointer;
@@ -416,16 +410,11 @@ footer {
         margin: 0;
     }
 
-    a:hover {
-        opacity: .5;
-        color: $primaryColor;
+    a:hover, a:active {
+        color: $tertiaryColor;
     }
 
-    .social-media {
-        padding: 0 10px;
-    }
-
-    .social-media:hover {
-        opacity: .5;
+    .social {
+        padding: 10px;
     }
 }
