Changes in margin/padding in multiple areas.

--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -11,7 +11,7 @@ header {
 
     a {
         font-size: 14px;
-        padding: 0 3px;
+        padding: 0 4px;
     }
 }
 
@@ -73,6 +73,7 @@ header {
     margin: 50px auto;
 
     h3 {
+        padding: 0 0 0 30px;
         text-align: left;
     }
 }
@@ -92,7 +93,7 @@ header {
     }
 
     .yellow-date {
-        font-size: 17px;
+        font-size: 14px;
     }
 
     .location {
