--- a/src/partials/newsletter.html
+++ b/src/partials/newsletter.html
@@ -35,7 +35,7 @@
         <!-- Form submission -->
         <div class="submission small-12 columns">
             <p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
-            <input id="submit-form" type="submit" value="Submit" onsubmit="submit()">
+            <input id="submit-form" type="submit" value="Submit" onsubmit="submit()" />
         </div>
       </form>
     <div id="submission-message"></div>
