Adding functionality to Listen Now button.

--- a/src/assets/scss/components/_large.scss
+++ b/src/assets/scss/components/_large.scss
@@ -2,7 +2,7 @@
 
 header {
     #menu {
-        padding: 18px 0;
+        padding: 14px 0;
     }
 
     h1 {
@@ -26,8 +26,8 @@ header {
     }
 
     #scroll-down-btn {
-        width: 190px;
-        height: 60px;
+        font-size: 18px;
+        padding: 20px 40px;
     }
 }
 
