--- a/src/assets/scss/components/_medium.scss
+++ b/src/assets/scss/components/_medium.scss
@@ -28,7 +28,7 @@ header {
 
 #slideshow {
     #main-title {
-        top: 12vh;
+        top: 11vh;
         right: 15%;
     }
 
@@ -37,8 +37,8 @@ header {
     }
 
     #scroll-down-btn {
-        width: 170px;
-        height: 50px;
+        padding: 17px 35px;
+        font-size: 15px;
     }
 }
 
