--- a/src/assets/scss/components/_small.scss
+++ b/src/assets/scss/components/_small.scss
@@ -224,6 +224,7 @@ header {
         width: 190px;
         height: 50px;
         margin: 2px 0;
+        border: 2px solid #333961;
         border-top: none;
         border-left: none;
     }
@@ -385,7 +386,7 @@ header {
         height: 40px;
         margin: 0;
         font-size: 15px;
-        border-color: #333961;
+        border: 2px solid #333961;
         border-top: none;
         border-left: none;
         cursor: pointer;
